EFSTest/ekstestservice.yml
apiVersion: v1
kind: Service
metadata:
  name: ekstestservice
  namespace: default
  labels:
    app: ekstest
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  selector:
    app: ekstest
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: NodePort
